fixed mutator and added script to run case studies